[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-agent"
version = "1.0.0"
description = "Passive OSINT reconnaissance agent powered by LangGraph and DeepSeek"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }
keywords = ["osint", "reconnaissance", "security", "langgraph", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "langchain-openai==1.1.10",
    "langchain-core==1.2.13",
    "langgraph==1.0.8",
    "langgraph-prebuilt==1.0.7",
    "langgraph-checkpoint==4.0.0",
    "langgraph-sdk==0.3.6",
    "playwright==1.58.0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "python-whois==0.9.6",
    "rich==15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
osint-agent = "agent:cli_main"

[project.urls]
Homepage = "https://github.com/giovanniromero-dev/osint-agent"
Issues   = "https://github.com/giovanniromero-dev/osint-agent/issues"

[tool.setuptools]
py-modules = ["agent", "tools", "osint_extra", "config", "reporting", "http_client"]
